--- a/browser-demo/4/index4_3.html
+++ b/browser-demo/4/index4_3.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>isPast()のテスト</title>
+<title>各リストを表示する処理のテスト</title>
 <link rel="stylesheet" href="https://cdn.rawgit.com/mochajs/mocha/v2.4.5/mocha.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sinon.js/1.15.4/sinon.js"></script>
 <script src="https://cdn.rawgit.com/Automattic/expect.js/0.3.1/index.js"></script>
